welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   

while(getCouleurSol==Color.green  ){
	
	avance();
	if(estSurBiscuit)( prendBiscuit();
	
	}
	







}        
